--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ full_rebuild: true
 name: Gridster
 description: the material experience for jekyll
 destination: jekyllbuild
-url: #place url
-baseurl: #place folder name if site is served in subfolder
+url: http://tomer-ben-david.github.io
+baseurl: /techblog
 permalink: /:title/
 paginate: 8
 paginate_path: /page/:num/
