--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 full_rebuild: true
-name: Gridster
+name: Tomer's Style
 description: the material experience for jekyll
 destination: jekyllbuild
 url: http://tomer-ben-david.github.io
