--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 full_rebuild: true
 name: Tomer's Style
-description: the material experience for jekyll
+description: Tomer on meditation and healthy lifestyle
 destination: jekyllbuild
 url: http://tomer-ben-david.github.io
 baseurl: /techblog
