--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 full_rebuild: true
-name: Tomer's Style
+name: Tomer
 description: Tomer on meditation and healthy lifestyle
 destination: jekyllbuild
 url: http://tomer-ben-david.github.io
